cmake_minimum_required(VERSION 3.20)
cmake_policy(SET CMP0075 NEW)
project(datacrumbs-utils LANGUAGES C CXX)
include(CTest)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(DATACRUMBS_UTILS_MODULE_NAME "datacrumbs")
set(DATACRUMBS_UTILS_PACKAGE_VERSION "1.0.0")
set(DATACRUMBS_UTILS_VERSION_TUPLE "(0, 0, 4)")
set(DATACRUMBS_UTILS_RELEASE_VERSION_STRING "0.0.4")

string(TOUPPER "${PROJECT_NAME}" UPPER_PROJECT_NAME)
set(DATACRUMBS_UTILS_LIBDIR "lib" CACHE STRING "Library output directory name")
set(
  DATACRUMBS_INSTALL_DIR
  ""
  CACHE PATH "Optional datacrumbs install prefix used to locate datacrumbsConfig.cmake"
)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
include(datacrumbs-utils)
if(DATACRUMBS_INSTALL_DIR AND NOT DATACRUMBS_INSTALL_DIR STREQUAL "")
  list(PREPEND CMAKE_PREFIX_PATH "${DATACRUMBS_INSTALL_DIR}")
  list(PREPEND CMAKE_PREFIX_PATH "${DATACRUMBS_INSTALL_DIR}/${CMAKE_INSTALL_LIBDIR}/cmake/datacrumbs")
  list(PREPEND CMAKE_PREFIX_PATH "${DATACRUMBS_INSTALL_DIR}/lib/cmake/datacrumbs")
  list(PREPEND CMAKE_PREFIX_PATH "${DATACRUMBS_INSTALL_DIR}/lib64/cmake/datacrumbs")
endif()
find_package(datacrumbs CONFIG REQUIRED)
find_package(Python3 COMPONENTS Interpreter REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(yaml-cpp REQUIRED)
set(DATACRUMBS_UTILS_PYTHON_EXECUTABLE "${Python3_EXECUTABLE}")

set(_DATACRUMBS_EXPORTED_KEYS
    HOST
    USER
    INSTALL_USER
    LOG_LEVEL_STR
    MODE_STR
    ENABLE_OPT
    TRACE_ALL_PROCESSES_OPT
    BPF_PRINT_ENABLE
    BPFTIME_COMPATIBLE
    INCLUSION_PATH
    CONFIGURED_TRACE_DIR
    CONFIGURED_LOG_DIR
    CONFIGURED_RUN_DIR
    SCHEDULER_TYPE
    SCHEDULER_JOBID_ENV_VAR
    TRACE_RINGBUF_SIZE_MB
    MAX_RUNTIME_FUNCTIONS
    SKIP_SMALL_EVENTS_THRESHOLD_NS
    TIME_INTERVAL_NS
    KERNEL_UNAME_R
    KERNEL_HEADERS_PATH
    LIBC_SO
    INSTALL_HOST
    INSTALL_CONFIGS_DIR
    INSTALL_DATA_DIR
    INSTALL_MODULES_DIR
    INSTALL_PROBE_OBJECTS_DIR
    INSTALL_RUNSTATEDIR
    CLIENT_LIB
    TRACE_DIR_PATTERN
    JOB_SCHEDULER
    JOB_ID_VAR
    SERVER_RUN_DIR
    SERVER_RUN_ID_FILE
    SYSTEM_PROBE_FILE
    PROBE_SECRET_FILE
    PROBE_MANAGER_TCP_HOST
    PROBE_MANAGER_TCP_PORT
)

foreach(_dc_key IN LISTS _DATACRUMBS_EXPORTED_KEYS)
  if(DEFINED datacrumbs_${_dc_key} AND NOT "${datacrumbs_${_dc_key}}" STREQUAL "")
    set(DATACRUMBS_${_dc_key} "${datacrumbs_${_dc_key}}")
  endif()
endforeach()

# Pass-through safeguard: if package export is empty, read the value from
# datacrumbs public config header instead of re-detecting locally.
if((NOT DEFINED DATACRUMBS_KERNEL_HEADERS_PATH OR "${DATACRUMBS_KERNEL_HEADERS_PATH}" STREQUAL "")
   AND DEFINED datacrumbs_INSTALL_INCLUDE_DIR
)
  set(_datacrumbs_public_config_header
      "${datacrumbs_INSTALL_INCLUDE_DIR}/datacrumbs/datacrumbs_config.h")
  if(EXISTS "${_datacrumbs_public_config_header}")
    file(READ "${_datacrumbs_public_config_header}" _datacrumbs_public_config_contents)
    string(REGEX MATCH
           "#define[ \t]+DATACRUMBS_KERNEL_HEADERS_PATH[ \t]+\"([^\"]*)\""
           _datacrumbs_kernel_headers_define
           "${_datacrumbs_public_config_contents}")
    if(_datacrumbs_kernel_headers_define)
      set(DATACRUMBS_KERNEL_HEADERS_PATH "${CMAKE_MATCH_1}")
    endif()
  endif()
endif()
message(STATUS "[${UPPER_PROJECT_NAME}] Loaded datacrumbs configuration from package header exports")

macro(datacrumbs_set_default variable_name default_value)
  if(NOT DEFINED ${variable_name} OR "${${variable_name}}" STREQUAL "")
    set(${variable_name} "${default_value}")
  endif()
endmacro()

macro(initialize_datacrumbs_utils_build_variables)
  # These are local build toggles for the extracted utils tree rather than
  # install/runtime settings that belong in the datacrumbs system configuration.
  if(NOT DEFINED DATACRUMBS_BUILD_ONLY)
    set(DATACRUMBS_BUILD_ONLY OFF)
  endif()
  if(NOT DEFINED DATACRUMBS_BPFTIME_COMPATIBLE)
    set(DATACRUMBS_BPFTIME_COMPATIBLE OFF)
  endif()
  if(NOT DEFINED BPFTOOL_EXECUTABLE)
    set(BPFTOOL_EXECUTABLE "NONE")
  endif()
  if(NOT DEFINED DATACRUMBS_KERNEL_VERSION)
    set(DATACRUMBS_KERNEL_VERSION "")
  endif()
  if(NOT DEFINED DATACRUMBS_KERNEL_HEADERS_PATH)
    set(DATACRUMBS_KERNEL_HEADERS_PATH "")
  endif()
  if(NOT DEFINED DATACRUMBS_KERNEL_PATH)
    set(DATACRUMBS_KERNEL_PATH "")
  endif()
endmacro()

set(DATACRUMBS_INSTALL_DIR "${datacrumbs_INSTALL_PREFIX}")
set(DATACRUMBS_PUBLIC_INCLUDE_DIR "${datacrumbs_INSTALL_INCLUDE_DIR}")
set(DATACRUMBS_PUBLIC_COMMON_LIBRARY datacrumbs::datacrumbs_common)

initialize_datacrumbs_utils_build_variables()
load_build_variables()
datacrumbs_set_default(DATACRUMBS_ENABLE_OPT ON)
datacrumbs_set_default(DATACRUMBS_TRACE_ALL_PROCESSES_OPT OFF)
datacrumbs_set_default(DATACRUMBS_BPF_PRINT_ENABLE OFF)
datacrumbs_set_default(DATACRUMBS_INCLUSION_PATH "NONE")
datacrumbs_set_default(DATACRUMBS_CONFIGURED_TRACE_DIR "/tmp")
datacrumbs_set_default(DATACRUMBS_CONFIGURED_LOG_DIR "/tmp")
datacrumbs_set_default(DATACRUMBS_CONFIGURED_RUN_DIR "NONE")
datacrumbs_set_default(DATACRUMBS_MODE_STR "TRACE")
datacrumbs_set_default(DATACRUMBS_HOST "NONE")
datacrumbs_set_default(DATACRUMBS_INSTALL_USER "$ENV{USER}")
datacrumbs_set_default(DATACRUMBS_USER "${DATACRUMBS_INSTALL_USER}")
datacrumbs_set_default(DATACRUMBS_TRACE_RINGBUF_SIZE_MB "16")
datacrumbs_set_default(DATACRUMBS_MAX_RUNTIME_FUNCTIONS "16384")
datacrumbs_set_default(DATACRUMBS_SKIP_SMALL_EVENTS_THRESHOLD_NS "1000")
datacrumbs_set_default(DATACRUMBS_TIME_INTERVAL_NS "1000000")
datacrumbs_set_default(DATACRUMBS_SCHEDULER_TYPE "FLUX")
datacrumbs_set_default(DATACRUMBS_SCHEDULER_JOBID_ENV_VAR "NONE")
datacrumbs_set_default(DATACRUMBS_LOG_LEVEL_STR "INFO")
derive_configurations()
find_system_details()
include_dependencies()

datacrumbs_set_default(DATACRUMBS_INSTALL_HOST "${DATACRUMBS_HOST}")
datacrumbs_set_default(DATACRUMBS_INSTALL_CONFIGS_DIR "${DATACRUMBS_INSTALL_ETC_CONFIGSDIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_SHARED_DATA_DIR "${DATACRUMBS_INSTALL_DIR}/share/datacrumbs/data")
datacrumbs_set_default(DATACRUMBS_INSTALL_DATA_DIR "${DATACRUMBS_INSTALL_SHARED_DATA_DIR}")
datacrumbs_set_default(
  DATACRUMBS_SYSTEM_PROBE_FILE
  "${DATACRUMBS_INSTALL_SHARED_DATA_DIR}/system-probe-${DATACRUMBS_INSTALL_USER}-${DATACRUMBS_HOST}.sqlite"
)
datacrumbs_set_default(
  DATACRUMBS_PROBE_SECRET_FILE
  "${DATACRUMBS_INSTALL_SHARED_DATA_DIR}/.datacrumbs-probe-secret"
)
datacrumbs_set_default(
  DATACRUMBS_PROBE_MANAGER_SOCKET_PATH
  "${DATACRUMBS_INSTALL_SHARED_DATA_DIR}/datacrumbs-probe-manager.sock"
)
datacrumbs_set_default(DATACRUMBS_PROBE_MANAGER_TCP_HOST "127.0.0.1")
datacrumbs_set_default(DATACRUMBS_PROBE_MANAGER_TCP_PORT "43123")
datacrumbs_set_default(DATACRUMBS_TRACE_DIR_PATTERN "${DATACRUMBS_CONFIGURED_TRACE_DIR}/%YY%/%MM%/%DD%")
datacrumbs_set_default(DATACRUMBS_CLIENT_LIB "${DATACRUMBS_INSTALL_LIB_DIR}/libdatacrumbs_client.so")
datacrumbs_set_default(DATACRUMBS_JOB_SCHEDULER "${DATACRUMBS_SCHEDULER_TYPE}")
datacrumbs_set_default(DATACRUMBS_JOB_ID_VAR "${DATACRUMBS_SCHEDULER_JOBID_ENV_VAR}")
if(DATACRUMBS_ENABLE_INCLUSION_PATH)
  datacrumbs_set_default(DATACRUMBS_INCLUSION_PATHS "${DATACRUMBS_INCLUSION_PATH}")
else()
  datacrumbs_set_default(DATACRUMBS_INCLUSION_PATHS "")
endif()
datacrumbs_set_default(DATACRUMBS_SERVER_RUN_DIR "${DATACRUMBS_INSTALL_RUNSTATEDIR}/datacrumbs")
datacrumbs_set_default(DATACRUMBS_SERVER_RUN_ID_FILE "${DATACRUMBS_SERVER_RUN_DIR}/datacrumbs.runid")
datacrumbs_set_default(DATACRUMBS_INSTALL_PREFIX "${DATACRUMBS_INSTALL_DIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_BIN_DIR "${DATACRUMBS_INSTALL_BINARYDIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_SBIN_DIR "${DATACRUMBS_INSTALL_SBINARYDIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_LIBEXEC_DIR "${DATACRUMBS_INSTALL_LIBEXEC}")
datacrumbs_set_default(DATACRUMBS_INSTALL_ETC_DIR "${DATACRUMBS_INSTALL_SYSCONFDIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_MODULES_DIR "${DATACRUMBS_INSTALL_ETC_MODULESDIR}")
datacrumbs_set_default(DATACRUMBS_INSTALL_PROBE_OBJECTS_DIR "${DATACRUMBS_INSTALL_LIBEXEC}/objects")

set(DATACRUMBS_UTILS_STAGED_INCLUDE_ROOT "${CMAKE_INCLUDE_OUTPUT_DIRECTORY}/datacrumbs")
set(DATACRUMBS_UTILS_GENERATED_CONFIG_HEADER
  "${CMAKE_INCLUDE_OUTPUT_DIRECTORY}/datacrumbs/datacrumbs_utils_config.h"
)
set(DATACRUMBS_UTILS_BUILD_SHARE_DIR "${CMAKE_BINARY_DIR}/share/datacrumbs")
set(DATACRUMBS_UTILS_BUILD_DATA_DIR "${DATACRUMBS_UTILS_BUILD_SHARE_DIR}/data")
datacrumbs_set_default(DATACRUMBS_INSTALL_SHARE_DIR "${DATACRUMBS_INSTALL_DIR}/share/datacrumbs")
datacrumbs_set_default(DATACRUMBS_INSTALL_DATA_SHARE_DIR "${DATACRUMBS_INSTALL_SHARE_DIR}/data")
datacrumbs_set_default(DATACRUMBS_INSTALL_CONFIGS_DIR "${DATACRUMBS_INSTALL_DIR}/etc/datacrumbs/configs")
datacrumbs_set_default(
  DATACRUMBS_INSTALL_ETC_MODULESDIR
  "${DATACRUMBS_INSTALL_DIR}/${CMAKE_INSTALL_SYSCONFDIR}/${DATACRUMBS_UTILS_MODULE_NAME}/${CMAKE_INSTALL_MODULES_DIR}"
)
set(DATACRUMBS_UTILS_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
set(DATACRUMBS_UTILS_INSTALL_BIN_DIR "${DATACRUMBS_INSTALL_BINARYDIR}")
set(DATACRUMBS_UTILS_INSTALL_SBIN_DIR "${DATACRUMBS_INSTALL_SBINARYDIR}")
set(DATACRUMBS_UTILS_INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
set(DATACRUMBS_UTILS_INSTALL_LIBEXEC_DIR "${DATACRUMBS_INSTALL_LIBEXEC}")
set(DATACRUMBS_UTILS_INSTALL_ETC_DIR "${DATACRUMBS_INSTALL_SYSCONFDIR}")
set(DATACRUMBS_UTILS_INSTALL_SHARE_DIR "${CMAKE_INSTALL_PREFIX}/share/datacrumbs")
set(DATACRUMBS_UTILS_INSTALL_DATA_DIR "${DATACRUMBS_UTILS_INSTALL_SHARE_DIR}/data")
set(DATACRUMBS_UTILS_INSTALL_MODULES_DIR "${DATACRUMBS_INSTALL_ETC_MODULESDIR}")
set(DATACRUMBS_UTILS_BUILD_MODULEFILE
    "${CMAKE_MODULES_OUTPUT_DIRECTORY}/${DATACRUMBS_UTILS_MODULE_NAME}/${DATACRUMBS_UTILS_RELEASE_VERSION_STRING}.lua"
)
set(DATACRUMBS_UTILS_BUILD_TRACK_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_track")
set(DATACRUMBS_UTILS_BUILD_UNTRACK_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_untrack")
set(DATACRUMBS_UTILS_BUILD_WRAP_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_wrap")
set(DATACRUMBS_UTILS_BUILD_SALLOC_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_salloc")
set(DATACRUMBS_UTILS_BUILD_SBATCH_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_sbatch")
set(DATACRUMBS_UTILS_BUILD_SETUP_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_setup")
set(DATACRUMBS_UTILS_BUILD_UTILITY_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_utility")
set(DATACRUMBS_UTILS_BUILD_RUN_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_run")
set(DATACRUMBS_UTILS_BUILD_STOP_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_stop")
set(DATACRUMBS_UTILS_BUILD_SERVICE_WRAPPER_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_service_wrapper")
set(DATACRUMBS_UTILS_BUILD_DEPLOY_SERVICES_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_deploy_services")
set(DATACRUMBS_UTILS_BUILD_DEPLOY_HOOKS_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_deploy_scheduler_hooks")
set(DATACRUMBS_UTILS_BUILD_INSTALL_FLUX_PLUGIN_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_install_flux_plugin")
set(DATACRUMBS_UTILS_BUILD_CLUSTER_SETUP_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_cluster_setup")
set(DATACRUMBS_UTILS_BUILD_SQLITE_EXTRACT_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_sqlite_extract")
set(DATACRUMBS_UTILS_BUILD_CONFIGURE_TEMPLATE_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_configure_template")
set(DATACRUMBS_UTILS_INSTALL_PROBE_WRAPPER "${CMAKE_BINARY_DIR}/datacrumbs_probe_configurator.install")
set(DATACRUMBS_UTILS_BUILD_ARGS_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_args")
set(DATACRUMBS_UTILS_BUILD_LOGGING_SCRIPT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_logging")
set(DATACRUMBS_UTILS_INSTALL_ARGS_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_args.install")
set(DATACRUMBS_UTILS_INSTALL_LOGGING_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_logging.install")
set(DATACRUMBS_UTILS_INSTALL_TRACK_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_track.install")
set(DATACRUMBS_UTILS_INSTALL_UNTRACK_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_untrack.install")
set(DATACRUMBS_UTILS_INSTALL_WRAP_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_wrap.install")
set(DATACRUMBS_UTILS_INSTALL_SALLOC_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_salloc.install")
set(DATACRUMBS_UTILS_INSTALL_SBATCH_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_sbatch.install")
set(DATACRUMBS_UTILS_INSTALL_SETUP_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_setup.install")
set(DATACRUMBS_UTILS_INSTALL_UTILITY_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_utility.install")
set(DATACRUMBS_UTILS_INSTALL_RUN_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_run.install")
set(DATACRUMBS_UTILS_INSTALL_STOP_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_stop.install")
set(DATACRUMBS_UTILS_INSTALL_SERVICE_WRAPPER_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_service_wrapper.install")
set(DATACRUMBS_UTILS_INSTALL_DEPLOY_SERVICES_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_deploy_services.install")
set(DATACRUMBS_UTILS_INSTALL_DEPLOY_HOOKS_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_deploy_scheduler_hooks.install")
set(DATACRUMBS_UTILS_INSTALL_INSTALL_FLUX_PLUGIN_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_install_flux_plugin.install")
set(DATACRUMBS_UTILS_INSTALL_CLUSTER_SETUP_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_cluster_setup.install")
set(DATACRUMBS_UTILS_INSTALL_SQLITE_EXTRACT_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_sqlite_extract.install")
set(DATACRUMBS_UTILS_INSTALL_CONFIGURE_TEMPLATE_SCRIPT "${CMAKE_BINARY_DIR}/datacrumbs_configure_template.install")
set(DATACRUMBS_UTILS_BUILD_PYTHON_DIR "${CMAKE_LIBEXEC_OUTPUT_DIRECTORY}/python")
set(DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR "${CMAKE_BINARY_DIR}/python-install")
set(DATACRUMBS_UTILS_DD_PRELOAD_TEST_SCRIPT "${CMAKE_BINARY_DIR}/dd_preload_test.sh")
set(DATACRUMBS_UTILS_BUILD_CLIENT_SO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libdatacrumbs_client.so")

file(MAKE_DIRECTORY "${DATACRUMBS_UTILS_BUILD_DATA_DIR}")

function(stage_datacrumbs_header source_path relative_dest)
  get_filename_component(dest_dir "${DATACRUMBS_UTILS_STAGED_INCLUDE_ROOT}/${relative_dest}" DIRECTORY)
  file(MAKE_DIRECTORY "${dest_dir}")
  configure_file("${source_path}" "${DATACRUMBS_UTILS_STAGED_INCLUDE_ROOT}/${relative_dest}" COPYONLY)
endfunction()

set(DATACRUMBS_UTILS_MOVED_HEADERS
    datacrumbs/utils/common/configuration_manager.h
    datacrumbs/utils/explorer/probe_explorer.h
    datacrumbs/utils/explorer/mechanism/elf_capture.h
    datacrumbs/utils/explorer/mechanism/header_capture.h
    datacrumbs/utils/explorer/mechanism/ksym_capture.h
    datacrumbs/utils/explorer/mechanism/usdt_functions.h
  datacrumbs/utils/client/library.h
)

foreach(header IN LISTS DATACRUMBS_UTILS_MOVED_HEADERS)
  stage_datacrumbs_header("${CMAKE_CURRENT_SOURCE_DIR}/src/${header}" "${header}")
endforeach()
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/configure_files/datacrumbs_utils_config.h.in"
  "${DATACRUMBS_UTILS_GENERATED_CONFIG_HEADER}"
  @ONLY
)
include_directories("${DATACRUMBS_PUBLIC_INCLUDE_DIR}")
include_directories("${CMAKE_INCLUDE_OUTPUT_DIRECTORY}")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")

configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/etc/datacrumbs/modulefiles/module.lua.in"
  "${DATACRUMBS_UTILS_BUILD_MODULEFILE}"
  @ONLY
)

message(STATUS "[${UPPER_PROJECT_NAME}] Configured datacrumbs-utils")
message(STATUS "             - DATACRUMBS_HOST: ${DATACRUMBS_HOST}")
message(STATUS "             - DATACRUMBS_USER: ${DATACRUMBS_USER}")
message(STATUS "             - DATACRUMBS_INSTALL_USER: ${DATACRUMBS_INSTALL_USER}")
message(STATUS "             - DATACRUMBS_LOG_LEVEL: ${DATACRUMBS_LOG_LEVEL}")
message(STATUS "             - DATACRUMBS_MODE: ${DATACRUMBS_MODE}")
message(STATUS "             - DATACRUMBS_ENABLE: ${DATACRUMBS_ENABLE}")
message(STATUS "             - DATACRUMBS_TRACE_ALL_PROCESSES: ${DATACRUMBS_TRACE_ALL_PROCESSES}")
message(STATUS "             - DATACRUMBS_SKIP_SMALL_EVENTS_THRESHOLD_NS: ${DATACRUMBS_SKIP_SMALL_EVENTS_THRESHOLD_NS}")
message(STATUS "             - DATACRUMBS_MAX_RUNTIME_FUNCTIONS: ${DATACRUMBS_MAX_RUNTIME_FUNCTIONS}")
message(STATUS "             - DATACRUMBS_TRACE_RINGBUF_SIZE_MB: ${DATACRUMBS_TRACE_RINGBUF_SIZE_MB}")
message(STATUS "             - DATACRUMBS_TIME_INTERVAL_NS: ${DATACRUMBS_TIME_INTERVAL_NS}")
message(STATUS "             - DATACRUMBS_BPF_PRINT_ENABLE_FLAG: ${DATACRUMBS_BPF_PRINT_ENABLE_FLAG}")
message(STATUS "             - DATACRUMBS_BPFTIME_COMPATIBLE_FLAG: ${DATACRUMBS_BPFTIME_COMPATIBLE_FLAG}")
message(STATUS "             - DATACRUMBS_ENABLE_INCLUSION_PATH: ${DATACRUMBS_ENABLE_INCLUSION_PATH}")
message(STATUS "             - DATACRUMBS_INCLUSION_PATH: ${DATACRUMBS_INCLUSION_PATH}")
message(STATUS "             - DATACRUMBS_KERNEL_UNAME_R: ${DATACRUMBS_KERNEL_UNAME_R}")
message(STATUS "             - DATACRUMBS_KERNEL_HEADERS_PATH: ${DATACRUMBS_KERNEL_HEADERS_PATH}")
message(STATUS "             - DATACRUMBS_LIBC_SO: ${DATACRUMBS_LIBC_SO}")
message(STATUS "             - DATACRUMBS_CONFIGURED_TRACE_DIR: ${DATACRUMBS_CONFIGURED_TRACE_DIR}")
message(STATUS "             - DATACRUMBS_CONFIGURED_LOG_DIR: ${DATACRUMBS_CONFIGURED_LOG_DIR}")
message(STATUS "             - DATACRUMBS_SCHEDULER_TYPE: ${DATACRUMBS_SCHEDULER_TYPE}")
message(STATUS "             - DATACRUMBS_SCHEDULER_JOBID_ENV_VAR: ${DATACRUMBS_SCHEDULER_JOBID_ENV_VAR}")
message(STATUS "             - DATACRUMBS_PROBE_MANAGER_TCP_HOST: ${DATACRUMBS_PROBE_MANAGER_TCP_HOST}")
message(STATUS "             - DATACRUMBS_PROBE_MANAGER_TCP_PORT: ${DATACRUMBS_PROBE_MANAGER_TCP_PORT}")
message(STATUS "             - Build data dir: ${DATACRUMBS_UTILS_BUILD_DATA_DIR}")
message(STATUS "             - Install configs dir: ${DATACRUMBS_INSTALL_CONFIGS_DIR}")
message(STATUS "             - Install data dir: ${DATACRUMBS_INSTALL_DATA_SHARE_DIR}")
message(STATUS "             - DATACRUMBS_INSTALL_DIR: ${DATACRUMBS_INSTALL_DIR}")
message(STATUS "             - DATACRUMBS_PUBLIC_INCLUDE_DIR: ${DATACRUMBS_PUBLIC_INCLUDE_DIR}")
message(STATUS "             - Client library path: ${DATACRUMBS_UTILS_BUILD_CLIENT_SO}")
install(
  FILES "${DATACRUMBS_UTILS_BUILD_MODULEFILE}"
  DESTINATION "${DATACRUMBS_INSTALL_ETC_MODULESDIR}/${DATACRUMBS_UTILS_MODULE_NAME}"
)
install(FILES "${DATACRUMBS_UTILS_GENERATED_CONFIG_HEADER}"
        DESTINATION "${DATACRUMBS_INSTALL_INCLUDE_DIR}/datacrumbs")

set(DATACRUMBS_UTILS_COMMON_SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/common/configuration_manager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/common/configuration_manager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/common/probe_signing_service.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/common/probe_signing_service.h"
)

set(DATACRUMBS_UTILS_CLIENT_SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/client/library.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/client/library.h"
)
add_library(datacrumbs_client SHARED ${DATACRUMBS_UTILS_CLIENT_SRC})
set_target_properties(
  datacrumbs_client
  PROPERTIES
    OUTPUT_NAME datacrumbs_client
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
)
target_link_libraries(datacrumbs_client ${DATACRUMBS_PUBLIC_COMMON_LIBRARY})
install(TARGETS datacrumbs_client LIBRARY DESTINATION "${DATACRUMBS_INSTALL_LIB_DIR}")

add_custom_target(
  clean_all
  COMMAND "${CMAKE_COMMAND}" -E echo "Dummy clean_all target for datacrumbs-utils"
  COMMENT "No generated BPF artifacts to clean in datacrumbs-utils"
)

set(DATACRUMBS_UTILS_PROBE_CONFIGURATOR_SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/probe_configurator_main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/probe_explorer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/probe_explorer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/elf_capture.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/elf_capture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/header_capture.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/header_capture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/ksym_capture.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/ksym_capture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/datacrumbs/utils/explorer/mechanism/usdt_functions.h"
)
add_executable(datacrumbs_probe_configurator ${DATACRUMBS_UTILS_PROBE_CONFIGURATOR_SRC} ${DATACRUMBS_UTILS_COMMON_SRC})
set_target_properties(datacrumbs_probe_configurator PROPERTIES OUTPUT_NAME datacrumbs_probe_configurator_exec)
target_link_libraries(datacrumbs_probe_configurator ${DATACRUMBS_PUBLIC_COMMON_LIBRARY} ${DEPENDENCY_LIB} yaml-cpp OpenSSL::Crypto)
add_dependencies(datacrumbs_probe_configurator datacrumbs_client clean_all)
install(TARGETS datacrumbs_probe_configurator RUNTIME DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}")


set(DATACRUMBS_UTILS_PROBE_CONFIGURATOR_BIN "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/datacrumbs_probe_configurator_exec")
set(DATACRUMBS_UTILS_PROBE_CONFIGURATOR_INSTALL_BIN
    "${DATACRUMBS_UTILS_INSTALL_BIN_DIR}/datacrumbs_probe_configurator_exec"
)
set(DATACRUMBS_PROBE_CONFIGURATOR_INSTALL_BIN "${DATACRUMBS_UTILS_PROBE_CONFIGURATOR_INSTALL_BIN}")

set(_DATACRUMBS_ORIG_INSTALL_BINARYDIR "${DATACRUMBS_INSTALL_BINARYDIR}")
set(DATACRUMBS_INSTALL_BINARYDIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_logging.in"
  "${DATACRUMBS_UTILS_BUILD_LOGGING_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_args.in"
  "${DATACRUMBS_UTILS_BUILD_ARGS_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_track.in"
  "${DATACRUMBS_UTILS_BUILD_TRACK_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_untrack.in"
  "${DATACRUMBS_UTILS_BUILD_UNTRACK_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_wrap.in"
  "${DATACRUMBS_UTILS_BUILD_WRAP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_salloc.in"
  "${DATACRUMBS_UTILS_BUILD_SALLOC_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_sbatch.in"
  "${DATACRUMBS_UTILS_BUILD_SBATCH_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_utility.in"
  "${DATACRUMBS_UTILS_BUILD_UTILITY_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_setup.in"
  "${DATACRUMBS_UTILS_BUILD_SETUP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_run.in"
  "${DATACRUMBS_UTILS_BUILD_RUN_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_stop.in"
  "${DATACRUMBS_UTILS_BUILD_STOP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_service_wrapper.in"
  "${DATACRUMBS_UTILS_BUILD_SERVICE_WRAPPER_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_deploy_services.in"
  "${DATACRUMBS_UTILS_BUILD_DEPLOY_SERVICES_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_deploy_scheduler_hooks.in"
  "${DATACRUMBS_UTILS_BUILD_DEPLOY_HOOKS_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_install_flux_plugin.in"
  "${DATACRUMBS_UTILS_BUILD_INSTALL_FLUX_PLUGIN_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_cluster_setup.in"
  "${DATACRUMBS_UTILS_BUILD_CLUSTER_SETUP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_configure_template.in"
  "${DATACRUMBS_UTILS_BUILD_CONFIGURE_TEMPLATE_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_sqlite_extract.in"
  "${DATACRUMBS_UTILS_BUILD_SQLITE_EXTRACT_SCRIPT}"
  @ONLY
)
file(MAKE_DIRECTORY "${DATACRUMBS_UTILS_BUILD_PYTHON_DIR}")
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/python/configure_templates.py"
  "${DATACRUMBS_UTILS_BUILD_PYTHON_DIR}/configure_templates.py"
  COPYONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/python/datacrumbs_sqlite_extract.py"
  "${DATACRUMBS_UTILS_BUILD_PYTHON_DIR}/datacrumbs_sqlite_extract.py"
  COPYONLY
)
set(DATACRUMBS_INSTALL_BINARYDIR "${_DATACRUMBS_ORIG_INSTALL_BINARYDIR}")
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_logging.in"
  "${DATACRUMBS_UTILS_INSTALL_LOGGING_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_args.in"
  "${DATACRUMBS_UTILS_INSTALL_ARGS_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/probe_configurator.in"
  "${DATACRUMBS_UTILS_INSTALL_PROBE_WRAPPER}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_track.in"
  "${DATACRUMBS_UTILS_INSTALL_TRACK_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_untrack.in"
  "${DATACRUMBS_UTILS_INSTALL_UNTRACK_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_wrap.in"
  "${DATACRUMBS_UTILS_INSTALL_WRAP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_salloc.in"
  "${DATACRUMBS_UTILS_INSTALL_SALLOC_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_sbatch.in"
  "${DATACRUMBS_UTILS_INSTALL_SBATCH_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_utility.in"
  "${DATACRUMBS_UTILS_INSTALL_UTILITY_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_setup.in"
  "${DATACRUMBS_UTILS_INSTALL_SETUP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_run.in"
  "${DATACRUMBS_UTILS_INSTALL_RUN_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_stop.in"
  "${DATACRUMBS_UTILS_INSTALL_STOP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_service_wrapper.in"
  "${DATACRUMBS_UTILS_INSTALL_SERVICE_WRAPPER_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_deploy_services.in"
  "${DATACRUMBS_UTILS_INSTALL_DEPLOY_SERVICES_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_deploy_scheduler_hooks.in"
  "${DATACRUMBS_UTILS_INSTALL_DEPLOY_HOOKS_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_install_flux_plugin.in"
  "${DATACRUMBS_UTILS_INSTALL_INSTALL_FLUX_PLUGIN_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_configure_template.in"
  "${DATACRUMBS_UTILS_INSTALL_CONFIGURE_TEMPLATE_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_sqlite_extract.in"
  "${DATACRUMBS_UTILS_INSTALL_SQLITE_EXTRACT_SCRIPT}"
  @ONLY
)
file(MAKE_DIRECTORY "${DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR}")
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/python/configure_templates.py"
  "${DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR}/configure_templates.py"
  COPYONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/python/datacrumbs_sqlite_extract.py"
  "${DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR}/datacrumbs_sqlite_extract.py"
  COPYONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/scripts/datacrumbs/datacrumbs_cluster_setup.in"
  "${DATACRUMBS_UTILS_INSTALL_CLUSTER_SETUP_SCRIPT}"
  @ONLY
)
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/tests/dd_preload_test.sh.in"
  "${DATACRUMBS_UTILS_DD_PRELOAD_TEST_SCRIPT}"
  @ONLY
)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_ARGS_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_LOGGING_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_TRACK_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_UNTRACK_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_WRAP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_SALLOC_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_SBATCH_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_UTILITY_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_SETUP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_RUN_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_STOP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_SERVICE_WRAPPER_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_DEPLOY_SERVICES_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_DEPLOY_HOOKS_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_INSTALL_FLUX_PLUGIN_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_CLUSTER_SETUP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_SQLITE_EXTRACT_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_BUILD_CONFIGURE_TEMPLATE_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_ARGS_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_LOGGING_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_PROBE_WRAPPER}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_TRACK_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_UNTRACK_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_WRAP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_SALLOC_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_SBATCH_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_UTILITY_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_SETUP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_RUN_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_STOP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_SERVICE_WRAPPER_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_DEPLOY_SERVICES_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_DEPLOY_HOOKS_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_INSTALL_FLUX_PLUGIN_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_CLUSTER_SETUP_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_SQLITE_EXTRACT_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_INSTALL_CONFIGURE_TEMPLATE_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(CHMOD "${DATACRUMBS_UTILS_DD_PRELOAD_TEST_SCRIPT}" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_ARGS_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_args")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_LOGGING_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_logging")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_PROBE_WRAPPER}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_probe_configurator")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_TRACK_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_track")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_UNTRACK_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_untrack")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_WRAP_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_wrap")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_SALLOC_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_salloc")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_SBATCH_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_sbatch")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_UTILITY_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_utility")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_SETUP_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_setup")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_RUN_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_run")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_STOP_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_stop")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_SERVICE_WRAPPER_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_service_wrapper")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_DEPLOY_SERVICES_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_deploy_services")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_DEPLOY_HOOKS_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_deploy_scheduler_hooks")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_INSTALL_FLUX_PLUGIN_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_install_flux_plugin")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_CLUSTER_SETUP_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_cluster_setup")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_SQLITE_EXTRACT_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_sqlite_extract")
install(PROGRAMS "${DATACRUMBS_UTILS_INSTALL_CONFIGURE_TEMPLATE_SCRIPT}" DESTINATION "${DATACRUMBS_INSTALL_BINARYDIR}"
        RENAME "datacrumbs_configure_template")
install(FILES
        "${DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR}/configure_templates.py"
        "${DATACRUMBS_UTILS_STAGED_INSTALL_PYTHON_DIR}/datacrumbs_sqlite_extract.py"
        DESTINATION "${DATACRUMBS_INSTALL_LIBEXEC}/python")

if(BUILD_TESTING)
  add_test(
    NAME datacrumbs_utils_dd_preload
    COMMAND "${DATACRUMBS_UTILS_DD_PRELOAD_TEST_SCRIPT}"
  )
  set_tests_properties(datacrumbs_utils_dd_preload PROPERTIES SKIP_RETURN_CODE 77)
endif()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tools/CMakeLists.txt")
  add_subdirectory(tools)
endif()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
  add_subdirectory(tests)
endif()
